<resources>
    <string name="app_name">Calculator</string>
    <string name="view_text">Начинайте вводить</string>
    <string name="btn_one">1</string>
    <string name="btn_two">2</string>
    <string name="btn_three">3</string>
    <string name="btn_four">4</string>
    <string name="btn_five">5</string>
    <string name="btn_six">6</string>
    <string name="btn_seven">7</string>
    <string name="btn_eight">8</string>
    <string name="btn_nine">9</string>
    <string name="btn_null">0</string>
    <string name="btn_clear">C</string>
    <string name="btn_delete">D</string>
    <string name="btn_multi">x</string>
    <string name="btn_division">/</string>
    <string name="btn_plus">+</string>
    <string name="btn_minus">-</string>
    <string name="btn_calc">=</string>
    <string name="btn_dot">.</string>
    
    <string name="btn_log">log</string>
    <string name="btn_bracket_left">(</string>
    <string name="btn_bracket_right">)</string>
    <string name="btn_sin">sin</string>
    <string name="btn_cos">cos</string>
    <string name="btn_tan">tg</string>
    <string name="btn_factorial">!</string>
    <string name="btn_percent">%</string>
    <string name="btn_exp">e</string>
    <string name="btn_degree">^</string>

    <string name="radio_day">Дневной режим</string>
    <string name="radio_night">Ночной режим</string>
    <string name="button_choose_theme">Применить</string>
    <string name="button_select_theme">Выбрать</string>
</resources>