<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/full_row"
    android:background="@drawable/brick_texture">

    <TableLayout style="@style/full_table">

        <TableRow style="@style/full_row">

            <TextView
                android:id="@+id/calculate_text"
                android:layout_span="4"
                style="@style/calculation_text"
                android:text="@string/view_text"/>

        </TableRow>

        <TableRow style="@style/full_row">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_clear"
                style="@style/number_button"
                android:text="@string/btn_clear"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_multiple"
                style="@style/operation_button"
                android:text="@string/btn_multi"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_division"
                style="@style/operation_button"
                android:text="@string/btn_division"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_delete_symbol"
                style="@style/operation_button"
                android:text="@string/btn_delete"/>

        </TableRow>

        <TableRow style="@style/full_row">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_seven"
                style="@style/number_button"
                android:text="@string/btn_seven"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_eight"
                style="@style/number_button"
                android:text="@string/btn_eight"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_nine"
                style="@style/number_button"
                android:text="@string/btn_nine"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_plus"
                style="@style/operation_button"
                android:text="@string/btn_plus"/>

        </TableRow>

        <TableRow style="@style/full_row">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_four"
                style="@style/number_button"
                android:text="@string/btn_four"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_five"
                style="@style/number_button"
                android:text="@string/btn_five"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_six"
                style="@style/number_button"
                android:text="@string/btn_six"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_minus"
                style="@style/operation_button"
                android:text="@string/btn_minus"/>

        </TableRow>

        <TableRow style="@style/full_row">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_one"
                style="@style/number_button"
                android:text="@string/btn_one"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_two"
                style="@style/number_button"
                android:text="@string/btn_two"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_three"
                style="@style/number_button"
                android:text="@string/btn_three"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_calc"
                style="@style/operation_button"
                android:text="@string/btn_calc"/>

        </TableRow>

        <TableRow style="@style/full_row">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_null"
                android:layout_span="2"
                style="@style/number_button"
                android:text="@string/btn_null"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_dot"
                android:layout_span="2"
                style="@style/number_button"
                android:text="@string/btn_dot"/>

        </TableRow>

    </TableLayout>

</ScrollView>
